--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,28 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<GridPane alignment="center" hgap="10" prefHeight="300.0" prefWidth="300.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="414.0" prefWidth="719.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Button fx:id="button" mnemonicParsing="false" onAction="#pressButton" text="Button" />
-      <TextField fx:id="name_textField" GridPane.rowIndex="1" />
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.rowIndex="2">
-        <buttons>
-          <Button mnemonicParsing="false" text="Button" />
-        </buttons>
-      </ButtonBar>
+      <Label layoutX="35.0" layoutY="58.0" text="Namn:" />
+      <Label layoutX="255.0" layoutY="58.0" text="Personal ID:" />
+      <Label layoutX="23.0" layoutY="147.0" text="Account Number:" />
+      <TextField fx:id="name_textField" layoutX="79.0" layoutY="54.0" />
+      <TextField fx:id="pNbr_textField" layoutX="328.0" layoutY="54.0" />
+      <TextField layoutX="128.0" layoutY="143.0" />
+      <Button fx:id="addPersonBtn" layoutX="499.0" layoutY="54.0" mnemonicParsing="false" onAction="#addPerson" text="Add Person" />
    </children>
-</GridPane>
+</AnchorPane>
