--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,10 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="414.0" prefWidth="719.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="423.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <Label layoutX="35.0" layoutY="58.0" text="Namn:" />
       <Label layoutX="255.0" layoutY="58.0" text="Personal ID:" />
@@ -14,5 +15,8 @@
       <TextField fx:id="pNbr_textField" layoutX="328.0" layoutY="54.0" />
       <TextField layoutX="128.0" layoutY="143.0" />
       <Button fx:id="addPersonBtn" layoutX="499.0" layoutY="54.0" mnemonicParsing="false" onAction="#addPerson" text="Add Person" />
+      <Button fx:id="findPersonBtn" layoutX="351.0" layoutY="96.0" mnemonicParsing="false" onAction="#findPerson" prefHeight="25.0" prefWidth="93.0" text="Find Person" />
+      <TextArea layoutX="477.0" layoutY="147.0" prefHeight="200.0" prefWidth="200.0" />
+      <TextArea fx:id="mainTxtArea" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
