--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -13,10 +13,10 @@
       <Label layoutX="23.0" layoutY="147.0" text="Account Number:" />
       <TextField fx:id="name_textField" layoutX="79.0" layoutY="54.0" />
       <TextField fx:id="pNbr_textField" layoutX="328.0" layoutY="54.0" />
-      <TextField layoutX="128.0" layoutY="143.0" />
+      <TextField fx:id="accountNbr_textField" layoutX="128.0" layoutY="143.0" />
       <Button fx:id="addPersonBtn" layoutX="499.0" layoutY="54.0" mnemonicParsing="false" onAction="#addPerson" text="Add Person" />
-      <Button fx:id="findPersonBtn" layoutX="351.0" layoutY="96.0" mnemonicParsing="false" onAction="#findPerson" prefHeight="25.0" prefWidth="93.0" text="Find Person" />
-      <TextArea layoutX="477.0" layoutY="147.0" prefHeight="200.0" prefWidth="200.0" />
-      <TextArea fx:id="mainTxtArea" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="findPersonBtn" layoutX="384.0" layoutY="94.0" mnemonicParsing="false" onAction="#findPerson" prefHeight="25.0" prefWidth="93.0" text="Find Person" />
+      <TextArea fx:id="mainTxtArea" layoutX="477.0" layoutY="164.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="addAccountBtn" layoutX="286.0" layoutY="143.0" mnemonicParsing="false" onAction="#addAccount" text="Add Account" />
    </children>
 </AnchorPane>
