--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="423.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="422.0" prefWidth="749.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <Label layoutX="35.0" layoutY="58.0" text="Namn:" />
-      <Label layoutX="255.0" layoutY="58.0" text="Personal ID:" />
+      <Label layoutX="223.0" layoutY="58.0" text="Personal ID:" />
       <Label layoutX="23.0" layoutY="147.0" text="Account Number:" />
-      <TextField fx:id="name_textField" layoutX="79.0" layoutY="54.0" />
-      <TextField fx:id="pNbr_textField" layoutX="328.0" layoutY="54.0" />
+      <TextField fx:id="name_textField" layoutX="79.0" layoutY="54.0" prefHeight="25.0" prefWidth="126.0" />
+      <TextField fx:id="pNbr_textField" layoutX="297.0" layoutY="54.0" prefHeight="25.0" prefWidth="99.0" />
       <TextField fx:id="accountNbr_textField" layoutX="128.0" layoutY="143.0" />
-      <Button fx:id="addPersonBtn" layoutX="499.0" layoutY="54.0" mnemonicParsing="false" onAction="#addPerson" text="Add Person" />
-      <Button fx:id="findPersonBtn" layoutX="384.0" layoutY="94.0" mnemonicParsing="false" onAction="#findPerson" prefHeight="25.0" prefWidth="93.0" text="Find Person" />
+      <Button fx:id="addPersonBtn" layoutX="408.0" layoutY="54.0" mnemonicParsing="false" onAction="#addPerson" prefHeight="25.0" prefWidth="99.0" text="Add Person" />
+      <Button fx:id="findPersonBtn" layoutX="297.0" layoutY="85.0" mnemonicParsing="false" onAction="#findPerson" prefHeight="25.0" prefWidth="99.0" text="Find Person" />
       <TextArea fx:id="mainTxtArea" layoutX="477.0" layoutY="164.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="addAccountBtn" layoutX="286.0" layoutY="143.0" mnemonicParsing="false" onAction="#addAccount" text="Add Account" />
+      <Button fx:id="removeBtn" layoutX="408.0" layoutY="85.0" mnemonicParsing="false" onAction="#removePerson" text="Remove Person" />
    </children>
 </AnchorPane>
