--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,22 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="423.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
-   <children>
-      <Label layoutX="35.0" layoutY="58.0" text="Namn:" />
-      <Label layoutX="255.0" layoutY="58.0" text="Personal ID:" />
-      <Label layoutX="23.0" layoutY="147.0" text="Account Number:" />
-      <TextField fx:id="name_textField" layoutX="79.0" layoutY="54.0" />
-      <TextField fx:id="pNbr_textField" layoutX="328.0" layoutY="54.0" />
-      <TextField fx:id="accountNbr_textField" layoutX="128.0" layoutY="143.0" />
-      <Button fx:id="addPersonBtn" layoutX="499.0" layoutY="54.0" mnemonicParsing="false" onAction="#addPerson" text="Add Person" />
-      <Button fx:id="findPersonBtn" layoutX="384.0" layoutY="94.0" mnemonicParsing="false" onAction="#findPerson" prefHeight="25.0" prefWidth="93.0" text="Find Person" />
-      <TextArea fx:id="mainTxtArea" layoutX="477.0" layoutY="164.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="addAccountBtn" layoutX="286.0" layoutY="143.0" mnemonicParsing="false" onAction="#addAccount" text="Add Account" />
-   </children>
-</AnchorPane>
+<Accordion maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+  <panes>
+    <TitledPane animated="false" text="Person">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0">
+               <children>
+                  <Button layoutX="499.0" layoutY="15.0" mnemonicParsing="false" text="Add" />
+                  <Label layoutX="35.0" layoutY="19.0" text="Name" />
+                  <Label layoutX="242.0" layoutY="19.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID" />
+                  <TextField fx:id="name_textField" layoutX="71.0" layoutY="15.0" />
+                  <TextField fx:id="pNbr_textField" layoutX="307.0" layoutY="15.0" />
+                  <TextArea fx:id="mainTxtArea" layoutX="199.0" layoutY="129.0" prefHeight="91.0" prefWidth="267.0" />
+                  <Button layoutX="314.0" layoutY="62.0" mnemonicParsing="false" onAction="#findPerson" text="Find" />
+                  <Button layoutX="414.0" layoutY="62.0" mnemonicParsing="false" text="Remove" />
+                  <Button layoutX="356.0" layoutY="260.0" mnemonicParsing="false" onAction="#openNewSceneButton" text="Button" />
+               </children></AnchorPane>
+      </content>
+    </TitledPane>
+    <TitledPane animated="false" text="Account">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <TextField fx:id="accountNbr_textField" layoutX="76.0" layoutY="39.0" />
+               </children></AnchorPane>
+      </content>
+    </TitledPane>
+    <TitledPane animated="false" text="Other">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+      </content>
+    </TitledPane>
+  </panes>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
+</Accordion>
