--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,36 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<Accordion maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Accordion maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
   <panes>
     <TitledPane animated="false" text="Person">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0">
                <children>
-                  <Button layoutX="499.0" layoutY="15.0" mnemonicParsing="false" text="Add" />
+                  <Button layoutX="136.0" layoutY="84.0" mnemonicParsing="false" onAction="#addAccount" text="Add" />
                   <Label layoutX="35.0" layoutY="19.0" text="Name" />
                   <Label layoutX="242.0" layoutY="19.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID" />
+                  <TextField fx:id="accountNbr_textField" layoutX="184.0" layoutY="84.0" />
                   <TextField fx:id="name_textField" layoutX="71.0" layoutY="15.0" />
                   <TextField fx:id="pNbr_textField" layoutX="307.0" layoutY="15.0" />
                   <TextArea fx:id="mainTxtArea" layoutX="199.0" layoutY="129.0" prefHeight="91.0" prefWidth="267.0" />
-                  <Button layoutX="314.0" layoutY="62.0" mnemonicParsing="false" onAction="#findPerson" text="Find" />
-                  <Button layoutX="414.0" layoutY="62.0" mnemonicParsing="false" text="Remove" />
+                  <Button layoutX="363.0" layoutY="40.0" mnemonicParsing="false" onAction="#findPerson" text="Find" />
+                  <Button layoutX="419.0" layoutY="40.0" mnemonicParsing="false" text="Remove" />
                   <Button layoutX="356.0" layoutY="260.0" mnemonicParsing="false" onAction="#openNewSceneButton" text="Button" />
-               </children></AnchorPane>
-      </content>
-    </TitledPane>
-    <TitledPane animated="false" text="Account">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <TextField fx:id="accountNbr_textField" layoutX="76.0" layoutY="39.0" />
+                  <Button layoutX="466.0" layoutY="15.0" mnemonicParsing="false" onAction="#addPerson" text="Add Person" />
                </children></AnchorPane>
       </content>
     </TitledPane>
     <TitledPane animated="false" text="Other">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+      </content>
+    </TitledPane>
+    <TitledPane animated="false" text="Account">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
       </content>
