--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -4,9 +4,11 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <Accordion maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
@@ -15,17 +17,26 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0">
                <children>
-                  <Button layoutX="136.0" layoutY="84.0" mnemonicParsing="false" onAction="#addAccount" text="Add" />
+                  <Button layoutX="35.0" layoutY="95.0" mnemonicParsing="false" onAction="#addAccount" text="Add account" />
                   <Label layoutX="35.0" layoutY="19.0" text="Name" />
                   <Label layoutX="242.0" layoutY="19.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID" />
-                  <TextField fx:id="accountNbr_textField" layoutX="184.0" layoutY="84.0" />
+                  <TextField fx:id="accountNbr_textField" layoutX="33.0" layoutY="73.0" />
                   <TextField fx:id="name_textField" layoutX="71.0" layoutY="15.0" />
                   <TextField fx:id="pNbr_textField" layoutX="307.0" layoutY="15.0" />
-                  <TextArea fx:id="mainTxtArea" layoutX="199.0" layoutY="129.0" prefHeight="91.0" prefWidth="267.0" />
+                  <TextArea fx:id="mainTxtArea" layoutX="216.0" layoutY="215.0" prefHeight="91.0" prefWidth="267.0" />
                   <Button layoutX="363.0" layoutY="40.0" mnemonicParsing="false" onAction="#findPerson" text="Find" />
-                  <Button layoutX="419.0" layoutY="40.0" mnemonicParsing="false" text="Remove" />
-                  <Button layoutX="356.0" layoutY="260.0" mnemonicParsing="false" onAction="#openNewSceneButton" text="Button" />
+                  <Button layoutX="452.0" layoutY="51.0" mnemonicParsing="false" text="Remove" />
                   <Button layoutX="466.0" layoutY="15.0" mnemonicParsing="false" onAction="#addPerson" text="Add Person" />
+                  <TextField fx:id="amount_textField" layoutX="187.0" layoutY="135.0" />
+                  <Label layoutX="144.0" layoutY="138.0" text="Amount" />
+                  <Label layoutX="71.0" layoutY="54.0" text="AccountNumber" />
+                  <RadioButton fx:id="creditRadioBtn" layoutX="178.0" layoutY="171.0" mnemonicParsing="false" text="Credit">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="creditWithraw" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="withdrawRadioBtn" layoutX="272.0" layoutY="171.0" mnemonicParsing="false" text="Withdraw" toggleGroup="$creditWithraw" />
+                  <Button layoutX="359.0" layoutY="134.0" mnemonicParsing="false" onAction="#creditOrWithdraw" text="Confirm" />
                </children></AnchorPane>
       </content>
     </TitledPane>
