--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,57 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<Accordion maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
-  <panes>
-    <TitledPane animated="false" text="Person">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="378.0" minWidth="700.0" prefHeight="378.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <SplitPane dividerPositions="0.4562841530054645" layoutX="343.0" layoutY="28.0" orientation="VERTICAL" prefHeight="368.0" prefWidth="674.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane prefHeight="143.0" prefWidth="672.0" style="-fx-background-color: #FFFFFF;">
                <children>
-                  <Button layoutX="35.0" layoutY="95.0" mnemonicParsing="false" onAction="#addAccount" text="Add account" />
-                  <Label layoutX="35.0" layoutY="19.0" text="Name" />
-                  <Label layoutX="242.0" layoutY="19.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID" />
-                  <TextField fx:id="accountNbr_textField" layoutX="33.0" layoutY="73.0" />
-                  <TextField fx:id="name_textField" layoutX="71.0" layoutY="15.0" />
-                  <TextField fx:id="pNbr_textField" layoutX="307.0" layoutY="15.0" />
-                  <TextArea fx:id="mainTxtArea" layoutX="216.0" layoutY="215.0" prefHeight="91.0" prefWidth="267.0" />
-                  <Button layoutX="363.0" layoutY="40.0" mnemonicParsing="false" onAction="#findPerson" text="Find" />
-                  <Button layoutX="452.0" layoutY="51.0" mnemonicParsing="false" text="Remove" />
-                  <Button layoutX="466.0" layoutY="15.0" mnemonicParsing="false" onAction="#addPerson" text="Add Person" />
-                  <TextField fx:id="amount_textField" layoutX="187.0" layoutY="135.0" />
-                  <Label layoutX="144.0" layoutY="138.0" text="Amount" />
-                  <Label layoutX="71.0" layoutY="54.0" text="AccountNumber" />
-                  <RadioButton fx:id="creditRadioBtn" layoutX="178.0" layoutY="171.0" mnemonicParsing="false" text="Credit">
+                  <Label layoutX="61.0" layoutY="66.0" text="Name:" />
+                  <Button layoutX="541.0" layoutY="93.0" mnemonicParsing="false" onAction="#removePerson" prefHeight="9.0" prefWidth="104.0" text="Remove Person" />
+                  <Button layoutX="541.0" layoutY="121.0" mnemonicParsing="false" onAction="#showAllAccounts" prefHeight="22.0" prefWidth="104.0" text="Show Person" />
+                  <Button layoutX="541.0" layoutY="63.0" mnemonicParsing="false" onAction="#addPerson" prefHeight="22.0" prefWidth="104.0" text="Add Person" />
+                  <Label layoutX="304.0" layoutY="66.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID:" />
+                  <TextField fx:id="name_textField" layoutX="104.0" layoutY="64.0" />
+                  <TextField fx:id="pNbr_textField" layoutX="369.0" layoutY="64.0" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="205.0" prefWidth="685.0">
+               <children>
+                  <RadioButton fx:id="creditRadioBtn" layoutX="111.0" layoutY="134.0" mnemonicParsing="false" selected="true" text="Credit">
                      <toggleGroup>
-                        <ToggleGroup fx:id="creditWithraw" />
+                        <ToggleGroup fx:id="test" />
                      </toggleGroup>
                   </RadioButton>
-                  <RadioButton fx:id="withdrawRadioBtn" layoutX="272.0" layoutY="171.0" mnemonicParsing="false" text="Withdraw" toggleGroup="$creditWithraw" />
-                  <Button layoutX="359.0" layoutY="134.0" mnemonicParsing="false" onAction="#creditOrWithdraw" text="Confirm" />
-               </children></AnchorPane>
-      </content>
-    </TitledPane>
-    <TitledPane animated="false" text="Other">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-      </content>
-    </TitledPane>
-    <TitledPane animated="false" text="Account">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-      </content>
-    </TitledPane>
-  </panes>
+                  <RadioButton fx:id="withdrawRadioBtn" layoutX="179.0" layoutY="133.0" mnemonicParsing="false" text="Withdraw" toggleGroup="$test" />
+                  <TextField fx:id="amount_textField" layoutX="104.0" layoutY="101.0" />
+                  <Label layoutX="51.0" layoutY="104.0" text="Amount:" />
+                  <Button layoutX="269.0" layoutY="102.0" mnemonicParsing="false" onAction="#creditOrWithdraw" prefHeight="22.0" prefWidth="104.0" text="Confirm" />
+                  <TextField fx:id="accountNbr_textField" layoutX="104.0" layoutY="45.0" />
+                  <Button layoutX="269.0" layoutY="46.0" mnemonicParsing="false" onAction="#addAccount" prefHeight="22.0" prefWidth="104.0" text="Add account" />
+                  <Label layoutX="6.0" layoutY="48.0" text="AccountNumber:" />
+                  <TextArea fx:id="mainTxtArea" editable="false" prefHeight="83.0" prefWidth="563.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
    </padding>
-</Accordion>
+</AnchorPane>
