--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -9,23 +10,24 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="378.0" minWidth="700.0" prefHeight="378.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="207.0" minWidth="689.0" prefHeight="358.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <SplitPane dividerPositions="0.4562841530054645" layoutX="343.0" layoutY="28.0" orientation="VERTICAL" prefHeight="368.0" prefWidth="674.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.44574780058651026" layoutX="10.0" layoutY="10.0" orientation="VERTICAL" prefHeight="480.0" prefWidth="831.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
         <items>
           <AnchorPane prefHeight="143.0" prefWidth="672.0" style="-fx-background-color: #FFFFFF;">
                <children>
                   <Label layoutX="61.0" layoutY="66.0" text="Name:" />
                   <Button layoutX="541.0" layoutY="93.0" mnemonicParsing="false" onAction="#removePerson" prefHeight="9.0" prefWidth="104.0" text="Remove Person" />
                   <Button layoutX="541.0" layoutY="121.0" mnemonicParsing="false" onAction="#showAllAccounts" prefHeight="22.0" prefWidth="104.0" text="Show Person" />
-                  <Button layoutX="541.0" layoutY="63.0" mnemonicParsing="false" onAction="#addPerson" prefHeight="22.0" prefWidth="104.0" text="Add Person" />
-                  <Label layoutX="304.0" layoutY="66.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID:" />
-                  <TextField fx:id="name_textField" layoutX="104.0" layoutY="64.0" />
-                  <TextField fx:id="pNbr_textField" layoutX="369.0" layoutY="64.0" />
+                  <Button graphicTextGap="5.0" layoutX="541.0" layoutY="63.0" mnemonicParsing="false" onAction="#addPerson" prefHeight="22.0" prefWidth="104.0" text="Add Person" />
+                  <Label layoutX="298.0" layoutY="66.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID:" />
+                  <TextField fx:id="name_textField" layoutX="104.0" layoutY="64.0" promptText="John Doe" />
+                  <TextField fx:id="pNbr_textField" layoutX="369.0" layoutY="64.0" promptText="yymmdd" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="205.0" prefWidth="685.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="343.0" prefWidth="1001.0">
                <children>
                   <RadioButton fx:id="creditRadioBtn" layoutX="111.0" layoutY="134.0" mnemonicParsing="false" selected="true" text="Credit">
                      <toggleGroup>
@@ -33,13 +35,23 @@
                      </toggleGroup>
                   </RadioButton>
                   <RadioButton fx:id="withdrawRadioBtn" layoutX="179.0" layoutY="133.0" mnemonicParsing="false" text="Withdraw" toggleGroup="$test" />
-                  <TextField fx:id="amount_textField" layoutX="104.0" layoutY="101.0" />
+                  <TextField fx:id="amount_textField" layoutX="104.0" layoutY="101.0" promptText="Must be a number" />
                   <Label layoutX="51.0" layoutY="104.0" text="Amount:" />
                   <Button layoutX="269.0" layoutY="102.0" mnemonicParsing="false" onAction="#creditOrWithdraw" prefHeight="22.0" prefWidth="104.0" text="Confirm" />
-                  <TextField fx:id="accountNbr_textField" layoutX="104.0" layoutY="45.0" />
+                  <TextField fx:id="accountNbr_textField" layoutX="104.0" layoutY="45.0" promptText="Account number" />
                   <Button layoutX="269.0" layoutY="46.0" mnemonicParsing="false" onAction="#addAccount" prefHeight="22.0" prefWidth="104.0" text="Add account" />
                   <Label layoutX="6.0" layoutY="48.0" text="AccountNumber:" />
-                  <TextArea fx:id="mainTxtArea" editable="false" prefHeight="83.0" prefWidth="563.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
+                  <TextArea fx:id="mainTxtArea" accessibleText="hej" disable="true" editable="false" prefHeight="83.0" prefWidth="563.0" text="Message dialog!" wrapText="true" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
                </children>
             </AnchorPane>
         </items>
