--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="207.0" minWidth="689.0" prefHeight="358.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="207.0" minWidth="689.0" prefHeight="358.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <SplitPane dividerPositions="0.44574780058651026" layoutX="10.0" layoutY="10.0" orientation="VERTICAL" prefHeight="480.0" prefWidth="831.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
         <items>
@@ -20,7 +14,7 @@
                <children>
                   <Label layoutX="61.0" layoutY="66.0" text="Name:" />
                   <Button layoutX="541.0" layoutY="93.0" mnemonicParsing="false" onAction="#removePerson" prefHeight="9.0" prefWidth="104.0" text="Remove Person" />
-                  <Button layoutX="541.0" layoutY="121.0" mnemonicParsing="false" onAction="#showAllAccounts" prefHeight="22.0" prefWidth="104.0" text="Show Person" />
+                  <Button layoutX="541.0" layoutY="121.0" mnemonicParsing="false" onAction="#showButton" prefHeight="22.0" prefWidth="104.0" text="Show Person" />
                   <Button graphicTextGap="5.0" layoutX="541.0" layoutY="63.0" mnemonicParsing="false" onAction="#addPerson" prefHeight="22.0" prefWidth="104.0" text="Add Person" />
                   <Label layoutX="298.0" layoutY="66.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID:" />
                   <TextField fx:id="name_textField" layoutX="104.0" layoutY="64.0" promptText="John Doe" />
