--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="207.0" minWidth="689.0" prefHeight="358.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="207.0" minWidth="689.0" prefHeight="358.0" prefWidth="707.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <SplitPane dividerPositions="0.44574780058651026" layoutX="10.0" layoutY="10.0" orientation="VERTICAL" prefHeight="480.0" prefWidth="831.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
         <items>
-          <AnchorPane prefHeight="143.0" prefWidth="672.0" style="-fx-background-color: #FFFFFF;">
+          <AnchorPane prefHeight="143.0" prefWidth="672.0">
                <children>
                   <Label layoutX="61.0" layoutY="66.0" text="Name:" />
                   <Button layoutX="541.0" layoutY="93.0" mnemonicParsing="false" onAction="#removePerson" prefHeight="9.0" prefWidth="104.0" text="Remove Person" />
@@ -21,7 +27,7 @@
                   <TextField fx:id="pNbr_textField" layoutX="369.0" layoutY="64.0" promptText="yymmdd" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="343.0" prefWidth="1001.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="343.0" prefWidth="1001.0" styleClass="\@DarkTheme">
                <children>
                   <RadioButton fx:id="creditRadioBtn" layoutX="111.0" layoutY="134.0" mnemonicParsing="false" selected="true" text="Credit">
                      <toggleGroup>
