--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefWidth="727.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <AnchorPane minHeight="207.0" minWidth="689.0" prefHeight="358.0" prefWidth="707.0" style="-fx-background-color: white; -fx-background-radius: 10;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
@@ -35,7 +34,7 @@
                   <TextField fx:id="accountNbr_textField" layoutX="104.0" layoutY="45.0" promptText="Account number" />
                   <Button layoutX="269.0" layoutY="46.0" mnemonicParsing="false" onAction="#addAccount" prefHeight="22.0" prefWidth="104.0" text="Add account" />
                   <Label layoutX="6.0" layoutY="48.0" text="AccountNumber:" />
-                  <TextArea fx:id="mainTxtArea" accessibleText="hej" disable="true" editable="false" prefHeight="83.0" prefWidth="563.0" text="Message dialog!" wrapText="true" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+                  <TextArea fx:id="mainTxtArea" accessibleText="hej" opacity="0.6" prefHeight="83.0" prefWidth="563.0" text="Message dialog!" wrapText="true" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
                      <font>
                         <Font size="15.0" />
                      </font>
